<resources>
    <string name="app_name">Dynolite</string>
    <string name="title_users">Users</string>
    <string name="title_garage">Garage</string>
    <string name="title_settings">Settings</string>
    <string name="close_app">Close application</string>
    <string name="no_permission">Required permission not granted</string>
    <string name="no_permissions">Required permissions not granted</string>
    <string name="need_permission">Need permission</string>
    <string name="need_permissions">Need permissions</string>
    <string name="need_permission_text">For the application to work, location access permission are required.</string>
    <string name="need_permissions_text">For the application to work, permissions to use bluetooth are required.</string>
    <string name="request_permission">Request permission</string>
    <string name="request_permissions">Request permissions</string>
    <string name="hardware">Bluetooth device hardware address</string>
    <string name="choose_from_paired">Choose from paired devices</string>
    <string name="choose_from_found">Choose from found devices</string>
    <string name="device_search">Device search</string>
    <string name="bluetooth" translatable="false">Bluetooth</string>
    <string name="disconnect">Disconnect bluetooth</string>
    <string name="exit">Exit</string>
    <string name="error_device_to_default">Error reset device to default settings</string>
    <string name="test_crash">Test crash</string>
    <string name="not_signed_in">Not signed in</string>
    <string name="error_authentication">Error authentication</string>
    <string name="add_car">Add car</string>
    <string name="title_car_add">Car - add</string>
    <string name="brand_">Brand:</string>
    <string name="model_">Model:</string>
    <string name="brand">Brand</string>
    <string name="name_">Name:</string>
    <string name="name">Name</string>
    <string name="add">Add</string>
    <string name="menu">Menu</string>
    <string name="edit">Edit</string>
    <string name="title_car_edit">Car - edit</string>
    <string name="accept">Accept</string>
    <string name="delete">Delete</string>
    <string name="remove">Remove</string>
    <string name="car_">"Car: "</string>
    <string name="cancel">Cancel</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="drag_header">Drag</string>
    <string name="graph">Graph</string>
    <string name="use">Use</string>
    <string name="title_car_use">Car - use</string>
    <string name="ratio_">Ratio:</string>
    <string name="ratio">Ratio</string>
    <string name="wheel_diameter_">Wheel diameter, cm</string>
    <string name="weight_">Weight, kg:</string>
    <string name="area_">Cross-sectional area, sq. m:</string>
    <string name="coef_">Air resistance coeff:</string>
    <string name="unit_rpm">rpm x100</string>
    <string name="unit_speed">km/h</string>
</resources>
