<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCarFragment">

    <TextView
        android:id="@+id/tvLabelNameAddCar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:labelFor="@id/etNameAddCar"
        android:text="@string/name_"
        android:textSize="@dimen/text_simple"
        app:layout_constraintBaseline_toBaselineOf="@id/etNameAddCar"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etNameAddCar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvLabelNameAddCar"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/tvLabelDiameterAddCar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:labelFor="@id/etDiameterAddCar"
        android:text="@string/wheel_diameter_"
        android:textSize="@dimen/text_simple"
        app:layout_constraintBaseline_toBaselineOf="@id/etDiameterAddCar"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etDiameterAddCar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvLabelDiameterAddCar"
        app:layout_constraintTop_toBottomOf="@id/etNameAddCar"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/tvLabelWeightAddCar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:labelFor="@id/etWeightAddCar"
        android:text="@string/weight_"
        android:textSize="@dimen/text_simple"
        app:layout_constraintBaseline_toBaselineOf="@id/etWeightAddCar"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etWeightAddCar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvLabelWeightAddCar"
        app:layout_constraintTop_toBottomOf="@id/etDiameterAddCar"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/tvLabelAreaAddCar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:labelFor="@id/etAreaAddCar"
        android:text="@string/area_"
        android:textSize="@dimen/text_simple"
        app:layout_constraintBaseline_toBaselineOf="@id/etAreaAddCar"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etAreaAddCar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvLabelAreaAddCar"
        app:layout_constraintTop_toBottomOf="@id/etWeightAddCar"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/tvLabelCoefAddCar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:labelFor="@id/etCoefAddCar"
        android:text="@string/coef_"
        android:textSize="@dimen/text_simple"
        app:layout_constraintBaseline_toBaselineOf="@id/etCoefAddCar"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etCoefAddCar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvLabelCoefAddCar"
        app:layout_constraintTop_toBottomOf="@id/etAreaAddCar"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/bAddAddCar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>