<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditCarFragment" >

    <TextView
        android:id="@+id/tvNameEditCar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:labelFor="@id/etNameEditCar"
        android:text="@string/name_"
        android:textSize="@dimen/text_simple"
        app:layout_constraintBaseline_toBaselineOf="@id/etNameEditCar"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etNameEditCar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvNameEditCar"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/tvLabelDiameterEditCar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:labelFor="@id/etDiameterEditCar"
        android:text="@string/wheel_diameter_"
        android:textSize="@dimen/text_simple"
        app:layout_constraintBaseline_toBaselineOf="@id/etDiameterEditCar"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etDiameterEditCar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvLabelDiameterEditCar"
        app:layout_constraintTop_toBottomOf="@id/etNameEditCar"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/tvLabelWeightEditCar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:labelFor="@id/etWeightEditCar"
        android:text="@string/weight_"
        android:textSize="@dimen/text_simple"
        app:layout_constraintBaseline_toBaselineOf="@id/etWeightEditCar"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etWeightEditCar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvLabelWeightEditCar"
        app:layout_constraintTop_toBottomOf="@id/etDiameterEditCar"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/tvLabelAreaEditCar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:labelFor="@id/etAreaEditCar"
        android:text="@string/area_"
        android:textSize="@dimen/text_simple"
        app:layout_constraintBaseline_toBaselineOf="@id/etAreaEditCar"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etAreaEditCar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvLabelAreaEditCar"
        app:layout_constraintTop_toBottomOf="@id/etWeightEditCar"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/tvLabelCoefEditCar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:labelFor="@id/etCoefEditCar"
        android:text="@string/coef_"
        android:textSize="@dimen/text_simple"
        app:layout_constraintBaseline_toBaselineOf="@id/etCoefEditCar"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etCoefEditCar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvLabelCoefEditCar"
        app:layout_constraintTop_toBottomOf="@id/etAreaEditCar"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/bAcceptEditCar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/accept"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>